- partial cherry-pick from master

--- a/src/test/resources/spark-prometheus-metrics.conf
+++ b/src/test/resources/spark-prometheus-metrics.conf
@@ -7,8 +7,8 @@
 *.sink.prometheus.unit=SECONDS
 #*.sink.prometheus.pushgateway-enable-timestamp=<enable/disable metrics timestamp> - defaults to false
 # Metrics name processing (version 2.3-1.1.0 +)
-*.sink.prometheus.metrics-name-capture-regex=((spark_\\w{32}(_\\d{1,2})?|local_\\d{13})_)(.+)
-*.sink.prometheus.metrics-name-replacement=$4
+*.sink.prometheus.metrics-name-capture-regex=((metrics_)?(spark_\\w{32}(_\\d{1,2})?|local_\\d{13})_)(.+)
+*.sink.prometheus.metrics-name-replacement=$5
 *.sink.prometheus.metrics-name-to-lowercase=true
 #*.sink.prometheus.labels=<labels in label=value format separated by comma>
 # Support for JMX Collector (version 2.3-2.0.0 +)
@@ -23,4 +23,4 @@
 *.sink.jmx.class=org.apache.spark.metrics.sink.JmxSink
 *.sink.jmx.class=org.apache.spark.metrics.sink.MetricsServlet
 *.source.jvm.class=org.apache.spark.metrics.source.JvmSource
-*.source.jvm.class=org.apache.spark.metrics.source.AccumulatorSource
+*.source.jvm.class=org.apache.spark.metrics.source.LongAccumulatorSource
